28.sep (ws)
      - fix: in shortcut editor check conflicts against local changed shortcuts
      - fix: add hardcoded F1 shortcut to shortcut editor
      - fix: "Change time signature for single measure"
      - fix: Key signatures do not include natural signs if added in reverse order
       (la)
      - add first support for swing playback
27.sep (ws)
      - change implementation of pitch up/down functions: "up" uses always sharps and
        "down" flats instead of guessing the right pitch spelling
      - add two new functions for note edit mode: "q" reduces the duration of
        the last entered note/rest by half, "w" doubles it
25.sep (ws)
      - note velocity can now be edited in note properties dialog and pianoroll editor
      - forward flip command for beamed chords to beam
24.sep (db)
      - add Polish handbook
      - add default shortcuts for staff text and system text
      (ws)
      - fix: drop symbol to palette
      - more code for pianoroll editor
      (la)
      - add support for staff line count in MusicXML import & export
23.sep (ws)
      - created new "audio library" al subdirectory
      - moved warnPitchRange from style to preferences
22.sep (ws)
      - preparation for Japanese translation
      - add style "warnPitchRange" to style editor
      - fix image properties dialog title
      - fix: "flip stem doesn't work after editing the beam"
      (db)
      - rename Style menu item from "Edit Style" to "Edit General Style"
      - add text to some unlabeled buttons in prefdialog.ui (accessibility)
21.sep (ws)
      - added experimental extension "pianoroll" and "drumroll"
      - added command line switch for experimental extensions: "-e"
      - added "al" audio library
      (la)
      - first release of ABC import plugin. It calls a webservice
      - Change brasilian portuguese language name
20.sep (ws)
      - implement undo for tuplet properties change
      - updated instruments.xml from Magnus Johansson